--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="bio">"Hey there! I'm Jeannette Gil, and I'm stirring up my career by transitioning from crafting cocktails to coding captivating websites. Intuition and empathy are my superpowers. Just as I anticipate a customer's drink preferences, I have a knack for understanding user needs and designing intuitive interfaces. Plus, my background in hospitality has honed my communication skills, making me a pro at translating complex technical concepts into relatable terms.
 
                     I'm diving deep into a web developer course, where I'm mastering languages like HTML, CSS, and JavaScript. I'm crafting digital experiences with each line of code that leaves a lasting impression. I'm excited to blend my hospitality roots with my newfound coding skills to create websites that not only look amazing but also engage and delight users. Cheers to the next round of innovation in web development!"</div>
-                <div class="button"></div>
+                <div class="button">
                 <a href="mailto:gil.jeannette@gmail.com" target="_blank">Let's Connect</a.
                 ></div>
             </div>
